sleeper/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sleeper
spec:
  rules:
    - http: 
        paths:
          - path: /reservation/*
            pathType: ImplementationSpecific
            backend:
              service: 
                name: reservation
                port: 
                  number: 3004
          - path: /auth/*
            pathType: ImplementationSpecific
            backend:
              service: 
                name: auth-http
                port: 
                  number: 3003
